--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,9 @@ matrix:
   include:
 #    - jdk: oraclejdk9 # JDK 9-ea+174 provided by Travis will be replaced by 9+177 in "before_install"
       before_install:
-        - apt-get install -y wget tar
-        - mkdir /opt/java && cd /opt/java
+        - sudo apt-get install -y wget tar
+        - sudo mkdir /opt/java && cd /opt/java
         - wget –quiet  -c --header "Cookie: oraclelicense=accept-securebackup-cookie" http://download.java.net/java/jdk9/archive/178/binaries/jdk-9+178_linux-x64_bin.tar.gz
-        - remove_dir_from_path $JAVA_HOME/bin
         - tar -xf jdk-9+178_linux-x64_bin.tar.gz
         - ln -sf /opt/java/jdk-9 /opt/java/current
         - export JAVA_HOME=/opt/java/current
