--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,9 @@ matrix:
       before_install:
         - sudo apt-get install -y wget tar
         - sudo mkdir /opt/java && cd /opt/java
-        - wget –quiet  -c --header "Cookie: oraclelicense=accept-securebackup-cookie" http://download.java.net/java/jdk9/archive/178/binaries/jdk-9+178_linux-x64_bin.tar.gz
-        - tar -xf jdk-9+178_linux-x64_bin.tar.gz
-        - ln -sf /opt/java/jdk-9 /opt/java/current
+        - sudo wget –quiet  -c --header "Cookie: oraclelicense=accept-securebackup-cookie" http://download.java.net/java/jdk9/archive/178/binaries/jdk-9+178_linux-x64_bin.tar.gz
+        - sudo tar -xf jdk-9+178_linux-x64_bin.tar.gz
+        - sudo ln -sf /opt/java/jdk-9 /opt/java/current
         - export JAVA_HOME=/opt/java/current
         - export PATH=$JAVA_HOME/bin:$PATH
         - java -version
